<resources>
    <string name="app_name">email_client_app</string>
    <string name="inboxes">All inboxes</string>
    <string name="inbox">Inbox</string>
    <string name="branches">All labels</string>
    <string name="star">Starred</string>
    <string name="hiden">Snoozed</string>
    <string name="important">Important</string>
    <string name="sent">Sent</string>
    <string name="plan">Scheduled</string>
    <string name="all">All mail</string>
    <string name="spams">Spam</string>
    <string name="search_result">RESULTS IN EMAILS</string>
    <string name="bin">Trash</string>
    <string name="available_add">Available add-ons:</string>
    <string name="primary">Primary</string>
    <string name="social">Social</string>
    <string name="reply">Reply</string>
    <string name="reply_all">Reply All</string>
    <string name="forward">Forward</string>
    <string name="spam_guide">Items that have been in Spam for more than 30 days will be automatically deleted.</string>
    <string name="empty_spam">Empty Spam now</string>
    <string name="promotion">Promotions</string>
    <string name="gg_tools">GOOGLE APPS</string>
    <string name="calendar">Calendar</string>
    <string name="later_today">Later today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="next_week">Next week</string>
    <string name="next_weekend">Next weekend</string>
    <string name="select_date_time">Select date and time</string>
    <string name="cancel">Cancel</string>
    <string name="move_to">Move to</string>
    <string name="label_as">Label as</string>
    <string name="timenavi">TimeNavi</string>
    <string name="add_error">Add-on error</string>
    <string name="add_time_content">This add-on is designed to help you when composing messages and has no content to display right now</string>
    <string name="contact">Contacts</string>
    <string name="setting">Settings</string>
    <string name="help">Help and feedback</string>
    <string name="others">Others</string>
    <string name="text">Compose</string>
    <string name="search">Search in mail</string>
    <string name="message">Mail</string>
    <string name="meeting">Meet</string>
    <string name="compose">Compose</string>
    <string name="from">From</string>
    <string name="cc">Cc</string>
    <string name="bcc">Bcc</string>
    <string name="theme">Subject</string>
    <string name="compose_email">compose email</string>
    <string name="email">nathietnguyen@gmail.som</string>
    <string name="user">User</string>
    <string name="email_form">Email</string>
    <string name="passwords">Passwords</string>
    <string name="sign_in">Sign in</string>
    <string name="pls_login">Please login and have an experience</string>
    <string name="tks">No, thanks</string>
    <string name="setting_activity">General settings</string>
    <string name="sign_out">Log out</string>
    <string name="default_time">10:00 AM</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email_received">thanhcotaima123</string>
    <string name="draft">Draft</string>
    <string name="numberofmail">2</string>
    <string name="subject">Subject</string>
    <string name="description">Description</string>
    <string name="tags">Tags</string>
    <string name="to">To:</string>

    <string name="app_name1">MaterialLoginPage</string>
    <string name="top_icon">TOP ICON</string>
    <string name="email1">Email</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="forgot_password">FORGOT PASSWORD?</string>
    <string name="or">OR</string>
    <string name="google_icon">google icon</string>
    <string name="facebook_icon">facebook icon</string>
    <string name="new_user_register_now">New User? Register Now</string>
</resources>
    <string name="addaccount">Add account</string>
    <string name="google">Google</string>
    <string name="outlook">Outlook, Hotmail and Live</string>
    <string name="yahoo">Yahoo</string>
    <string name="exchange">Exchange and Office 365</string>
    <string name="other_mail">Other</string>
</resources>
