<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center">
    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/name"
        app:civ_border_width="2dp"
        app:civ_border_color="#F44336"
        android:id="@+id/img_user"
        android:layout_margin="15dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/pls_login"
        android:gravity="center"
        android:layout_margin="10dp"
        android:id="@+id/tv_email_dialog" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/background_field_border">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:background="@drawable/background_button_white">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@color/white"
                android:hint="@string/email_form"
                android:textSize="20sp"
                android:paddingLeft="15dp"
                android:id="@+id/img_field_user"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/background_field_border">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:background="@drawable/background_button_white">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@color/white"
                android:hint="@string/passwords"
                android:textSize="20sp"
                android:inputType="textPassword"
                android:paddingLeft="15dp"
                android:id="@+id/img_field_passwords"/>
        </LinearLayout>
    </LinearLayout>
    <Button
        android:layout_marginTop="10dp"
        android:background="@drawable/background_field_border"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/sign_in"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:id="@+id/btn_authentication"
        android:layout_marginBottom="15dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tks"
        android:layout_marginBottom="15dp"
        android:textSize="15sp"
        android:textColor="#1976d2"
        android:id="@+id/tv_back"/>
</LinearLayout>