<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="200dp"
    android:background="@drawable/background_field_email_white">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/label_as"
        android:textSize="20sp"
        android:textColor="@color/black"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_centerVertical="true"
        android:layout_marginLeft="20dp">
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_inbox"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:text="@string/inbox"/>
    </LinearLayout>
    <CheckBox
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginRight="20dp"
        android:layout_centerVertical="true"
        android:layout_alignParentRight="true"
        android:id="@+id/checkbox_labels"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="15dp">
        <TextView
            android:layout_marginRight="50dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:textColor="@color/blue"
            android:textSize="15sp"
            android:id="@+id/tv_label_cancel"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="OK"
            android:textColor="@color/blue"
            android:textSize="15sp"
            android:id="@+id/tv_label_ok"/>
    </LinearLayout>
</RelativeLayout>