<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/bottom_sheet_container"
    android:background="@drawable/background_bottom_sheet">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="#329C37">
        <TextView
            android:id="@+id/tv_time_navi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/timenavi"
            android:textSize="20sp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:textColor="@color/white"/>
        <LinearLayout
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/background_add_on"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="15dp">
            <TextView
                android:id="@+id/tv_add_on_purchase"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TN"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                />
        </LinearLayout>
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/gray"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:layout_marginBottom="1dp"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/tv_add_error"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_error"
                android:textSize="15sp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="15dp" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="15dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:text="@string/add_time_content"/>
    </LinearLayout>
</LinearLayout>