<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="5dp"
    android:background="@color/white">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:padding="14dp">
        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginRight="5dp"
            android:src="@drawable/streamer"
            android:id="@+id/img_person_sent_origin"/>
        <LinearLayout
            android:layout_marginLeft="10dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="3"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:gravity="center_vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/to"
                    android:textSize="16sp"
                    />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:weightSum="5"
                    >
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3.4"
                        android:orientation="horizontal"
                        android:gravity="center_vertical">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="16sp"
                            android:maxLines="1"
                            android:singleLine="true"
                            android:ellipsize="end"
                            android:text="@string/user"
                            android:id="@+id/tv_person_received_origin"
                            android:layout_marginLeft="5dp"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="4"
                            android:layout_marginLeft="4dp"
                            android:textSize="10sp"
                            android:layout_gravity="bottom"
                            android:id="@+id/num_mail_sent"/>
                    </LinearLayout>
                    <RelativeLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1.6">
                        <TextView
                            android:layout_centerVertical="true"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="15sp"
                            android:text="@string/default_time"
                            android:layout_gravity="center_vertical"
                            android:id="@+id/tv_time_received_origin"
                            />
                    </RelativeLayout>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:ellipsize="end"
                    android:textSize="15sp"
                    android:text="@string/subject"
                    android:id="@+id/tv_subject_sent_origin"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:weightSum="5">
               <LinearLayout
                   android:layout_width="0dp"
                   android:layout_height="match_parent"
                   android:layout_weight="3"
                   android:gravity="center_vertical"
                   >
                   <TextView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:id="@+id/tv_description_origin"
                       android:text="@string/description"
                       android:textSize="15sp"
                       android:maxLines="1"
                       android:singleLine="true"
                       android:ellipsize="end"
                       />
               </LinearLayout>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:orientation="horizontal"
                    android:weightSum="3">
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_weight="2"
                        android:layout_height="match_parent"
                        android:background="@drawable/rounded_corner"
                        android:gravity="center_vertical"
                        android:orientation="vertical"
                        android:backgroundTint="#9c9c9c"
                        >
                        <TextView
                            android:layout_gravity="center"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="14sp"
                            android:textColor="@color/white"
                            android:id="@+id/tv_tags_origin"
                            android:text="@string/inbox"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        >
                        <ToggleButton
                            android:layout_marginBottom="10dp"
                            android:layout_gravity="center"
                            android:id="@+id/star_toggle_sent"
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:background="@drawable/star_toggle"
                            android:textOff=""
                            android:textOn="" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>